
  ZOOKEEPER-2126 Improve exit log messsage of EventThread and SendThread by
  adding SessionId (surendra singh lilhore via rakeshr)

  ZOOKEEPER-2124 Allow Zookeeper version string to have underscore '_'
  (Chris Nauroth via michim)

  ZOOKEEPER-2205: Log type of unexpected quorum packet in learner handler loop
  (Hitoshi Mitake via rgs)

NEW FEATURES:

  ZOOKEEPER-2237 Port async multi to 3.4 branch (Ivan Kelly via rakeshr)

Release 3.4.6 - 2014-03-10 

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1900. NullPointerException in truncate (Camille Fournier)

  ZOOKEEPER-1474. Cannot build Zookeeper with IBM Java: use of Sun
  MXBean classes (Adalberto Medeiros via phunt)

  ZOOKEEPER-1596. Zab1_0Test should ensure that the file is closed
  (Enis Soztutar via phunt)

  ZOOKEEPER-1513. "Unreasonable length" exception while starting a
  server (Skye W-M via phunt)

  ZOOKEEPER-1581. change copyright in notice to 2012 (breed via phunt)

  ZOOKEEPER-753. log4j dependency in the pom needs to have exclusion
  lists (Sean Busbey via phunt)

  ZOOKEEPER-1553. Findbugs configuration is missing some dependencies
  (Sean Busbey via phunt)

  ZOOKEEPER-1478. Small bug in QuorumTest.testFollowersStartAfterLeader( )
  (Alexander Shraer via fpj, breed, phunt)

  ZOOKEEPER-1387. Wrong epoch file created
  (Benjamin Busjaeger via breed, phunt)

  ZOOKEEPER-1578. org.apache.zookeeper.server.quorum.Zab1_0Test failed due to
  hard code with 33556 port. (Li Ping via mahadev)

  ZOOKEEPER-1334. Zookeeper 3.4.x is not OSGi compliant - MANIFEST.MF
  is flawed (Claus Ibsen via phunt)
  
  ZOOKEEPER-1535. ZK Shell/Cli re-executes last command on exit 
  (Edward Ribeiro via camille)

  ZOOKEEPER-1495. ZK client hangs when using a function not available
  on the server. (Skye W-M via phunt)

  ZOOKEEPER-1613. The documentation still points to 2008 in the
  copyright notice (Edward Ribeiro via phunt)

  ZOOKEEPER-1562. Memory leaks in zoo_multi API
  (Deepak Jagtap via phunt)
