@@ -27,6 +27,7 @@ import org.apache.zookeeper.ZooDefs.OpCode;
 import org.apache.zookeeper.server.Request;
 import org.apache.zookeeper.server.RequestProcessor;
 import org.apache.zookeeper.server.ZooKeeperCriticalThread;
+import org.apache.zookeeper.server.ZooKeeperServerListener;
 
 /**
  * This RequestProcessor matches the incoming committed requests with the
@@ -57,8 +58,9 @@ public class CommitProcessor extends ZooKeeperCriticalThread implements RequestP
      */
     boolean matchSyncs;
 
-    public CommitProcessor(RequestProcessor nextProcessor, String id, boolean matchSyncs) {
-        super("CommitProcessor:" + id);
+    public CommitProcessor(RequestProcessor nextProcessor, String id,
+            boolean matchSyncs, ZooKeeperServerListener listener) {
+        super("CommitProcessor:" + id, listener);
         this.nextProcessor = nextProcessor;
         this.matchSyncs = matchSyncs;
     }
