@@ -71,8 +71,9 @@ public abstract class LearnerZooKeeperServer extends QuorumZooKeeperServer {
     
     @Override
     public void createSessionTracker() {
-        sessionTracker = new LearnerSessionTracker(this, getZKDatabase().getSessionWithTimeOuts(),
-                self.getId());
+        sessionTracker = new LearnerSessionTracker(this, getZKDatabase()
+                .getSessionWithTimeOuts(), self.getId(),
+                getZooKeeperServerListener());
     }
     
     @Override
